--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         import { getDatabase, ref, push } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-database.js";
 
         const firebaseConfig = {
-            apiKey: "AIzaSyDP4312i3LprsAoeAMkOxXJQ8J_hMT_Sj4",
+            apiKey: "ur key",
             authDomain: "hhif-d0596.firebaseapp.com",
             projectId: "hhif-d0596",
             storageBucket: "hhif-d0596.firebasestorage.app",
